@@ -261,10 +261,16 @@ $(document).ready(function() {
      * @memberOf    jQuery
      * @name        sqlqueryform_submit
      */
-    $("#sqlqueryform.ajax").live('submit', function(event) {
+    $("#sqlqueryform.ajax input:submit").live('click', function(event) {
         event.preventDefault();
 
-        $form = $(this);
+        var $form = $(this).closest("form");
+        var clicked_button = $(this).attr('id');
+
+        if ('button_submit_query' == clicked_button) {
+            $form.find("select[name=id_bookmark]").attr("value","");
+        }
+
         if (! checkSqlQuery($form[0])) {
             return false;
         }
@@ -276,7 +282,7 @@ $(document).ready(function() {
 
         PMA_prepareForAjaxRequest($form);
 
-        $.post($(this).attr('action'), $(this).serialize() , function(data) {
+        $.post($form.attr('action'), $form.serialize() , function(data) {
             if(data.success == true) {
                 // fade out previous messages, if any
                 $('.success').fadeOut();
