@@ -8,6 +8,7 @@ phpMyAdmin - ChangeLog
 - bug #3399951 [export] Config for export compression not used
 - bug #3400690 [privileges] DB-specific privileges won't submit
 - bug #3410604 [config] Configuration storage incorrect suggested table name 
+- bug #3383572 [interface] Cannot execute saved query
 
 3.4.5.0 (2011-09-14)
 - bug #3375325 [interface] Page list in navigation frame looks odd
